# Qguardarr

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vars  AGENTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  STRATEGIES.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/test-events/: push_main.json  push_tag.json
.github/workflows/: ci.yml  docker.yml  release.yml
config/: qguardarr.yaml  qguardarr.yaml.example
scripts/: qbittorrent-init.sh  start.sh  test-docker-integration.sh
src/: __init__.py  allocation.py  config.py  dry_run_store.py  main.py  qbit_client.py  rollback.py  tracker_matcher.py  webhook_handler.py
src/utils/: logging_setup.py
test-data/: nginx-mock.conf  public_torrents.json
test-data/qbit-config/qBittorrent/config/: qBittorrent.conf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  docker_utils.py  test_config_hot_reload.py  test_docker_qbit.py  test_public_torrents.py  test_rollback_e2e.py  test_rollback_integration.py  test_sla_compliance.py
tests/load/: __init__.py  test_performance.py
tests/test-data/: public_torrents.json  real_torrents.json
tests/unit/: test_allocation.py  test_allocation_cycle.py  test_allocation_cycle_branches.py  test_allocation_phase2.py  test_allocation_phase3.py  test_allocation_phase3_engine.py  test_allocation_phase3_rounding.py  test_auto_unlimit_unmanaged.py  test_cache_ttl_setting.py  test_config.py  test_config_extras.py  test_config_phase3.py  test_config_reload_endpoint.py  test_dry_run_mode.py  test_dry_run_visibility.py  test_limits_reset_endpoint.py  test_main_endpoints.py  test_main_endpoints_extras.py  test_main_endpoints_phase3.py  test_main_error_paths.py  test_main_lifespan.py  test_managed_endpoint.py  test_match_test_endpoint.py  test_preview_branches.py  test_preview_delta_and_unlimited_summary.py  test_preview_phase3.py  test_preview_strategies.py  test_qbit_client_active_filter.py  test_qbit_client_api.py  test_qbit_client_auth.py  test_qbit_client_more.py  test_qbit_client_utils.py  test_qbit_needs_update.py  test_rollback_apply.py  test_rollback_errors.py  test_rollback_manager.py  test_scoring.py  test_selection.py  test_smoothing_reset_endpoint.py  test_tracker_matcher.py  (+3 more)
